just incase this is the progress up to here

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
   <h1>Hello, World!</h1>
   <p>This is a blank Chrome extension.</p>
+  <button id="run">click to run</button>
+
+  <script src="popup.js"></script>
 </body>
 </html>
